fix(announcement): spacing tweaks

--- a/elements/rh-announcement/rh-announcement-lightdom.css
+++ b/elements/rh-announcement/rh-announcement-lightdom.css
@@ -62,7 +62,7 @@ rh-announcement:not(:defined) rh-cta:not(:defined) {
 @media (min-width: 768px) {
   rh-announcement:not(:defined) {
     flex-direction: row;
-    gap: var(--rh-space-2xl, 32px);
+    gap: var(--rh-space-lg, 16px);
     justify-content: center;
     margin-inline: auto;
   }
@@ -84,5 +84,11 @@ rh-announcement:not(:defined) rh-cta:not(:defined) {
   rh-announcement:not(:defined) p {
     font-size: var(--rh-font-size-body-text-lg, 1.125rem) !important;
     text-align: start;
+  }
+}
+
+@media (min-width: 992px) {
+  rh-announcement:not(:defined) {
+    gap: var(--rh-space-2xl, 32px);
   }
 }
